[package]
name = "peckboard_test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpio-cdev = {version = "0.5.0", features = ["async-tokio"]}
tokio = {version="1.12.0", features = ["full"]}
thiserror = "1.0.30"
futures = "0.3.17"